replaced agents with request channel added more verbose logging for session periodic and final save