@@ -3,7 +3,7 @@
                  [org.slf4j/slf4j-api "1.6.6"]
                  [org.slf4j/slf4j-log4j12 "1.6.6"]
                  [org.clojure/tools.logging "0.2.3"]
-                 [aleph "0.3.0-beta4"]
+                 [aleph "0.3.0-beta5"]
                  [zookeeper-clj "0.9.2"]
                  [ring "1.1.1"]
                  [compojure "1.1.1"]
@@ -12,10 +12,11 @@
                  [ring-json-params "0.1.3"]
                  [compojure "1.1.0"]
                  [slingshot "0.10.3"]
-                 [cheshire "4.0.1"]
-                 [clj-aws-s3 "0.3.2"]
+                 [cheshire "4.0.3"]
+                 [timewarrior/clj-aws-s3 "0.3.3"]
                  [org.clojure/tools.cli "0.2.1"]
                  [protobuf "0.6.1"]
+                 [clj-oauth2 "0.2.0"]
                  [org.clojure/tools.nrepl "0.2.0-beta9"]]
   :dev-dependencies [[lein-marginalia "0.7.1"]
                      [criterium "0.2.1"]]
@@ -27,6 +28,17 @@
                         :compiler {:output-to "resources/public/js/main.js"
                                    :optimizations :whitespace
                                    :pretty-print true}}]}
-  :jvm-opts ["-Djava.awt.headless=true" "-Dio.netty.epollBugWorkaround=true"
-             "-server" "-XX:+UseConcMarkSweepGC" "-Xmx2g" "-XX:NewSize=1g"]
+  :jvm-opts ["-server"
+             "-Djava.awt.headless=true"
+             "-Dio.netty.epollBugWorkaround=true"
+             "-XX:+UseConcMarkSweepGC"
+             "-XX:+UseParNewGC"
+             "-d64"
+             "-Xms4g"
+             "-Xmx4g"
+             "-XX:MaxPermSize=256m"
+             "-XX:NewRatio=2"
+             "-XX:ParallelGCThreads=8"
+             "-XX:ParallelCMSThreads=8"
+             "-XX:ConcGCThreads=8"]
   :main grimoire.core)
